--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -26,7 +26,7 @@ jobs:
         run: npx cypress install
 
       - name: Run Cypress tests
-        run: npx cypress run --spec cypress\e2e\screenshots.cy.js
+        run: npx cypress run --spec cypress\e2e\video.cy.js
         env:
           CYPRESS_baseUrl: https://opensource-demo.orangehrmlive.com
 
