--- a/.github/workflows/main.yml
+++ b/.github/workflows/main.yml
@@ -1,44 +1,44 @@
 name: Cypress Tests
-
 on:
-  push:
-    branches: [ main ]
-  pull_request:
-    branches: [ main ]
-
+ push:
+  branches: [ main, develop ]
+ pull_request:
+  branches: [ main ]
 jobs:
-  cypress-run:
-    runs-on: ubuntu-latest
-    steps:
-      - name: Checkout code
-        uses: actions/checkout@v4
-
-      - name: Setup Node.js
-        uses: actions/setup-node@v4
-        with:
-          node-version: '20'
-          cache: 'npm'
-
-      - name: Install dependencies
-        run: npm ci
-
-      - name: Install Cypress
-        run: npx cypress install
-
-      - name: Run Cypress tests
-        run: npx cypress run --spec cypress\e2e\video.cy.js
-        env:
-          CYPRESS_baseUrl: https://opensource-demo.orangehrmlive.com
-
-      - name: Upload screenshots (on failure)
-        if: failure()
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-screenshots
-          path: cypress/screenshots
-
-      - name: Upload reports
-        uses: actions/upload-artifact@v4
-        with:
-          name: cypress-reports
-          path: cypress/reports
+ cypress-run:
+  runs-on: ubuntu-latest
+  strategy:
+   matrix:
+    node-version: [18.x]
+  steps:
+   - name: Checkout code
+     uses: actions/checkout@v4
+   - name: Setup Node.js
+     uses: actions/setup-node@v4
+     with:
+      node-version: 20
+      cache: 'npm'
+   - name: Install dependencies
+     run: npm ci
+   - name: Run Cypress tests
+     run: npx cypress run --spec "cypress/e2e/screenshots.cy.js" --browser chrome --headless
+   - name: Generate HTML report
+     run: |
+        npx mochawesome-merge cypress/reports/*.json > cypress/reports/report.json
+        npx marge cypress/reports/report.json --reportDir cypress/reports/html
+ 
+ 
+   - name: Upload test artifacts
+     uses: actions/upload-artifact@v4
+     with:
+      name: cypress-results
+      path: |
+       cypress/screenshots
+       cypress/videos
+       cypress/reports
+      if-no-files-found: warn
+      compression-level: 6
+      overwrite: false
+      include-hidden-files: false
+ 
+ 
